@@ -1,5 +1,9 @@
 2001-11-19  Matt Wilson  <msw@redhat.com>
 
+	* codegen/codegen.py (attrchecktmpl): fix indention.
+	(write_getsets): use the handler's error handling code snippits.
+	(write_boxed_getattr): likewise.
+
 	* gobjectmodule.c (pyg_fatal_exceptions_notify_{add,remove}):
 	fixed think-o, don't store a pointer to the function pointer, just
 	store the function pointer.
